# MiDM

./: .gitignore  LICENSE  README.md  build.bat  dev.bat  run.sh  rust-installer.bat  setup.bat
.github/workflows/: release.yml
backend/: requirements.txt  server.py
backend/core/: downloader.py  manager.py  settings.py
midm-ui/: index.html  package-lock.json  package.json
midm-ui/src/: App.css  App.jsx
midm-ui/src-tauri/: Cargo.toml  tauri.conf-copy.json  tauri.conf.json  tauri.confcopywindows.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
midm-ui/src-tauri/capabilities/: default.json
midm-ui/src-tauri/icons/: icon.icns
midm-ui/src-tauri/src/: lib.rs  main.rs
midm-ui/src/components/: AddDownloadModal.jsx  DownloadList.jsx  SettingsModal.jsx  Sidebar.jsx  StatusBar.jsx  TitleBar.jsx
midm-ui/src/lib/: openFolder.js
midm-ui/src/store/: downloadStore.js
